Add layer between value store/access w/HeapItem