@@ -3,6 +3,7 @@ package org.cf.smalivm.opcode;
 import gnu.trove.map.TIntObjectMap;
 
 import org.cf.smalivm.VMTester;
+import org.cf.smalivm.context.HeapItem;
 import org.junit.Test;
 import org.junit.experimental.runners.Enclosed;
 import org.junit.runner.RunWith;
@@ -10,264 +11,301 @@ import org.junit.runner.RunWith;
 @RunWith(Enclosed.class)
 public class TestIfOp {
 
+    private static final String CLASS_NAME = "Lif_test;";
+    private static final int ADDRESS_IF = 0;
+    private static final int ADDRESS_NOP = 2;
+    private static final int ADDRESS_RETURN = 3;
+    private static final int[] IF_TRUE_VISITATIONS = new int[] { ADDRESS_IF, ADDRESS_RETURN };
+    private static final int[] IF_FALSE_VISITATIONS = new int[] { ADDRESS_IF, ADDRESS_NOP, ADDRESS_RETURN };
+
     public static class TestCompareObjectReferences {
         @Test
-        public void testDifferentObjectReferencesAreNotEqual() {
+        public void testIfNotEqualWithTwoDifferentStringReferencesIsTrue() {
             String methodSignature = "IfNotEqual()V";
-            String obj1 = "object";
+            String obj1 = "object string";
             // Need to get crafty or javac will be smart enough to use same literal for both objects
             String obj2 = new StringBuilder(obj1).toString();
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, obj1, 1, obj2);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, obj1, "Ljava/lang/String;", 1, obj2,
+                            "Ljava/lang/String;");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
 
-            initial = VMTester.buildRegisterState(0, obj1, 1, new int[] { 1 });
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+        @Test
+        public void testIfNotEqualWithStringAndArrayReferenceIsTrue() {
+            String methodSignature = "IfNotEqual()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, "object string", "Ljava/lang/String;", 1,
+                            new int[0], "[I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIdenticalObjectReferencesAreEqual() {
             String methodSignature = "IfEqual()V";
-            String obj = "object";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, obj, 1, obj);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            String obj = "object string";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, obj, "Ljava/lang/String;", 1, obj,
+                            "Ljava/lang/String;");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfFalseBooleanEqualZero() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, new Boolean(false));
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, Boolean.FALSE, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfZeroIntegerEqualZero() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, new Integer(0));
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, Integer.valueOf(0), "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfNullEqualZero() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, null);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, null, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfObjectNotEqualZero() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, "object");
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, "object string", "Ljava/lang/String;");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfPrimitiveArrayNotEqualZero() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, new byte[] { 0x1 });
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, new byte[] { 0x1 }, "[B");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfTrueBooleanNotEqualZero() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, new Boolean(true));
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, Boolean.TRUE, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
     }
 
     public static class TestIdenticalPrimitiveValueTypes {
         @Test
-        public void testIfEqualsFalse() {
+        public void testIfEqualWithTwoUnequalIntegersIsFalse() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfEqualsTrue() {
+        public void testIfEqualWithTwoEqualIntegersIsTrue() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfEqualZeroFalse() {
+        public void testIfEqualWithOneAndZeroIsFalse() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfEqualZeroTrue() {
+        public void testIfEqualWithZeroAndZeroIsTrue() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterOrEqualFalse() {
+        public void testIfGreaterOrEqualWith0And1IsFalse() {
             String methodSignature = "IfGreaterOrEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterOrEqualTrue() {
+        public void testIfGreaterOrEqualWith0And0IsTrue() {
             String methodSignature = "IfGreaterOrEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
-
-            initial = VMTester.buildRegisterState(0, 1, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterOrEqualZeroFalse() {
+        public void testIfGreaterOrEqualWith1And0IsTrue() {
+            String methodSignature = "IfGreaterOrEqual()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
+
+        @Test
+        public void testIfGreaterOrEqualWithOneAndZeroIsTrue() {
+            String methodSignature = "IfGreaterOrEqual()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
+
+        @Test
+        public void testIfGreaterOrEqualZeroWithNegativeOneIsFalse() {
             String methodSignature = "IfGreaterOrEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, -1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, -1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterOrEqualZeroTrue() {
+        public void testIfGreaterOrEqualZeroWithZeroIsTrue() {
             String methodSignature = "IfGreaterOrEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
-
-            initial = VMTester.buildRegisterState(0, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterThanFalse() {
+        public void testIfGreaterOrEqualZeroWithOneIsTrue() {
+            String methodSignature = "IfGreaterOrEqualZero()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
+
+        @Test
+        public void testIfGreaterThanWith0And1IsFalse() {
             String methodSignature = "IfGreaterThan()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterThanTrue() {
+        public void testIfGreaterThanWith1And0IsTrue() {
             String methodSignature = "IfGreaterThan()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterThanZeroFalse() {
+        public void testIfGreaterThanZeroWith0IsFalse() {
             String methodSignature = "IfGreaterThanZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfGreaterThanZeroTrue() {
+        public void testIfGreaterThanZeroWithOneIsTrue() {
             String methodSignature = "IfGreaterThanZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessOrEqualFalse() {
+        public void testIfLessOrEqualWith1And0IsFalse() {
             String methodSignature = "IfLessOrEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessOrEqualTrue() {
+        public void testIfLessOrEqualWith0And0IsTrue() {
             String methodSignature = "IfLessOrEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
-
-            initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessOrEqualZeroFalse() {
+        public void testIfLessOrEqualWith0And1IsTrue() {
+            String methodSignature = "IfLessOrEqual()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
+
+        @Test
+        public void testIfLessOrEqualZeroWithOneIsFalse() {
             String methodSignature = "IfLessOrEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessOrEqualZeroTrue() {
+        public void testIfLessOrEqualZeroWithNegative1IsTrue() {
             String methodSignature = "IfLessOrEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, -1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
-
-            initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, -1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessThanFalse() {
+        public void testIfLessOrEqualZeroWith0IsTrue() {
+            String methodSignature = "IfLessOrEqualZero()V";
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
+        }
+
+        @Test
+        public void testIfLessThanWith0And1IsFalse() {
             String methodSignature = "IfLessThan()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessThanTrue() {
+        public void testIfLessThanWith0And1IsTrue() {
             String methodSignature = "IfLessThan()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessThanZeroFalse() {
+        public void testIfLessThanZeroWith0IsFalse() {
             String methodSignature = "IfLessThanZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfLessThanZeroTrue() {
+        public void testIfLessThanZeroWithNegativeOneIsTrue() {
             String methodSignature = "IfLessThanZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, -1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, -1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfNotEqualsFalse() {
+        public void testIfNotEqualWith0And0IsFalse() {
             String methodSignature = "IfNotEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfNotEqualsTrue() {
+        public void testIfNotEqualWith0And1IsTrue() {
             String methodSignature = "IfNotEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0, 1, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I", 1, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfIntegerZeroNotEqualZeroFalse() {
+        public void testIfNotEqualZeroWith0IsFalse() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, NOP, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 0, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_FALSE_VISITATIONS);
         }
 
         @Test
-        public void testIfNonZeroIntegerNotEqualZeroTrue() {
+        public void testIfNotEqualZeroWithOneIsTrue() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfZeroByteEqualZero() {
+        public void testIfEqualZeroWith0ByteIsTrue() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 0x0);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 0x0, "B");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfNonZeroByteNotEqualZero() {
+        public void testIfNotEqualZeroWith7ByteIsTrue() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 0x7);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 0x7, "B");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
     }
 
@@ -275,221 +313,213 @@ public class TestIfOp {
         @Test
         public void testIfEqualWithBooleanAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, true, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, true, "Z", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndDouble() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, 1D, "D");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndFloat() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, 1F, "F");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndLong() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, 1L, "J");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithByteAndShort() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (byte) 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (byte) 1, "B", 1, (short) 1, "S");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithDoubleAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (double) 1, 1, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1D, "D", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithDoubleAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (double) 1, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1D, "D", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithFloatAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (float) 1, 1, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1F, "F", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithFloatAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (float) 1, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1F, "F", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithFloatAndDouble() {
             // 3.2 is tricky, 3.2F != 3.2D && Double.compareTo(3.2F, 3.2D)
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 3.2F, 1, 3.2D);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 3.2F, "F", 1, 3.2D, "D");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndByte() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (byte) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, (byte) 1, "B");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndDouble() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (double) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 1D, "D");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndFloat() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (float) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 1F, "F");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndLong() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (long) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, 1L, "J");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithIntAndShort() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, 1, 1, (short) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1, "I", 1, (short) 1, "S");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithLongAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (long) 1, 1, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1L, "J", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithLongAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (long) 1, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1L, "J", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithLongAndDouble() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (long) 1, 1, (double) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1L, "J", 1, 1D, "D");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithLongAndFloat() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (long) 1, 1, (float) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, 1L, "J", 1, 1F, "F");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithShortAndBoolean() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (short) 1, 1, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (short) 1, "S", 1, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithShortAndChar() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (short) 1, 1, (char) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (short) 1, "S", 1, (char) 1, "C");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithShortAndDouble() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (short) 1, 1, (double) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (short) 1, "S", 1, 1D, "D");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithShortAndFloat() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (short) 1, 1, (float) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (short) 1, "S", 1, 1F, "F");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
         public void testIfEqualWithShortAndLong() {
             String methodSignature = "IfEqual()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, (short) 1, 1, (long) 1);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, (short) 1, "S", 1, 1L, "J");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfFalseEqualZero() {
+        public void testIfEqualZeroWithFalseIsTrue() {
             String methodSignature = "IfEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, false);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, false, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
 
         @Test
-        public void testIfTrueNotEqualZero() {
+        public void testIfNotEqualZeroWithTrueIsTrue() {
             String methodSignature = "IfNotEqualZero()V";
-            TIntObjectMap<Object> initial = VMTester.buildRegisterState(0, true);
-            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, new int[] { IF, RETURN });
+            TIntObjectMap<HeapItem> initial = VMTester.buildRegisterState(0, true, "Z");
+            VMTester.testVisitation(CLASS_NAME, methodSignature, initial, IF_TRUE_VISITATIONS);
         }
     }
-
-    private static final String CLASS_NAME = "Lif_test;";
-
-    private static final int IF = 0;
-
-    private static final int NOP = 2;
-
-    private static final int RETURN = 3;
 
 }
